--- a/lambdas/aws/scrape-prices/package.json
+++ b/lambdas/aws/scrape-prices/package.json
@@ -21,6 +21,7 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
-        "node-html-parser": "^6.1.5"
+        "node-html-parser": "^6.1.5",
+        "tiny-async-pool": "^2.1.0"
     }
 }
